tests/NormalTests/paczka1/small_fuzzy/86111812.err
Error in line 11: qAM3TWZ6 A440 -1,3
Error in line 5: SQwAkKjgfMD S97 70,4
Error in line 13: xCWwT0ep S97 6,7
